:lipstick: design : fix sign-in, sign up alignment, min-width, password-confirm issues

--- a/frontend/src/containers/SignIn/SignIn.scss
+++ b/frontend/src/containers/SignIn/SignIn.scss
@@ -1,6 +1,9 @@
 @import "../../css/basic.scss";
 
 .SignIn {
+  width: 100%;
+  height: 100%;
+  min-width: 100vh;
   background-color: $paper-color;
   .left {
     width: 50%;
@@ -9,15 +12,9 @@
   .right {
     margin-top: 100px;
     width: 50%;
+    min-width: 110vh;
     display: inline-block;
     vertical-align: top;
-  }
-  p {
-    line-height: 155%;
-    font-size: 14px;
-    max-width: 400px;
-    margin-left: 250px;
-    margin-bottom: 20px;
   }
   h4 {
     margin-bottom: 20px;
@@ -27,12 +24,16 @@
       font-weight: 700;
     }
   }
+  p {
+    font-size: 14px;
+    margin-left: 20px;
+  }
   label {
     opacity: 0;
   }
   input[type="username"],
   input[type="password"] {
-    width: 35%;
+    width: 280px;
     padding: 25px 10px 5px 10px;
     font-size: 15px;
     font-weight: 700;
@@ -47,7 +48,7 @@
   }
   button {
     border: none;
-    width: 120px;
+    width: 100px;
     height: 40px;
     border-radius: 3px;
     font-size: 15px;
@@ -57,7 +58,8 @@
     color: white;
     cursor: pointer;
     &#signin-button {
-      margin-left: 80px;
+      margin-right: 0px;
+      margin-left: 110px;
       color: white;
       background-color: $main-light-color;
       &:disabled {
@@ -67,7 +69,7 @@
     }
     &#signup-button {
       margin-left: 80px;
-      margin-right: 60px;
+      margin-right: 90px;
     }
     &#forgot-password-button {
       text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
